Wagon: Deploying site to repository

--- a/dropwizard-extra-scala/scaladocs/com/datasift/dropwizard/kafka/consumer/Consumer$.html
+++ b/dropwizard-extra-scala/scaladocs/com/datasift/dropwizard/kafka/consumer/Consumer$.html
@@ -119,26 +119,26 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Attributes</dt><dd>final </dd><dt>Definition Classes</dt><dd>Any</dd></dl></div>
     </li><li visbl="pub" name="com.datasift.dropwizard.kafka.consumer.Consumer#apply" data-isabs="false">
-      <a id="apply[A](KafkaConsumerConfiguration,Environment,String)(StreamProcessor[A])(Decoder[A]):KafkaConsumer[A]"></a>
+      <a id="apply[A](KafkaConsumerConfiguration,Environment,String)(StreamProcessor[A])(Decoder[A]):KafkaConsumer"></a>
       <h4 class="signature">
       <span class="kind">def</span>
       <span class="symbol"> 
         <span class="name">apply</span>
         <span class="tparams">[<span name="A">A</span>]</span>
-        <span class="params">(<span name="conf">conf: <span name="com.datasift.dropwizard.kafka.config.KafkaConsumerConfiguration" class="extype">KafkaConsumerConfiguration</span></span>, <span name="env">env: <span name="com.yammer.dropwizard.config.Environment" class="extype">Environment</span></span>, <span name="name">name: String</span>)</span><span class="params">(<span name="f">f: <span name="com.datasift.dropwizard.kafka.consumer.StreamProcessor" class="extype">StreamProcessor</span>[A]</span>)</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span name="kafka.serializer.Decoder" class="extype">Decoder</span>[A]</span>)</span><span class="result">: <span name="com.datasift.dropwizard.kafka.consumer.KafkaConsumer" class="extype">KafkaConsumer</span>[A]</span>
+        <span class="params">(<span name="conf">conf: <span name="com.datasift.dropwizard.kafka.config.KafkaConsumerConfiguration" class="extype">KafkaConsumerConfiguration</span></span>, <span name="env">env: <span name="com.yammer.dropwizard.config.Environment" class="extype">Environment</span></span>, <span name="name">name: String</span>)</span><span class="params">(<span name="f">f: <span name="com.datasift.dropwizard.kafka.consumer.StreamProcessor" class="extype">StreamProcessor</span>[A]</span>)</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span name="kafka.serializer.Decoder" class="extype">Decoder</span>[A]</span>)</span><span class="result">: <span name="com.datasift.dropwizard.kafka.consumer.KafkaConsumer" class="extype">KafkaConsumer</span></span>
       </span>
       </h4>
       <p class="shortcomment cmt">Creates a new com.datasift.dropwizard.kafka.consumer.KafkaConsumer for the given <code>configuration</code>.</p><div class="fullcomment"><div class="comment cmt"><p>Creates a new com.datasift.dropwizard.kafka.consumer.KafkaConsumer for the given <code>configuration</code>.
 </p></div><dl class="paramcmts block"><dt class="param">conf</dt><dd class="cmt"><p>the configuration to configure the com.datasift.dropwizard.kafka.consumer.KafkaConsumer with</p></dd><dt class="param">env</dt><dd class="cmt"><p>the com.yammer.dropwizard.config.Environment to manage the com.datasift.dropwizard.kafka.consumer.KafkaConsumer</p></dd><dt>returns</dt><dd class="cmt"><p>a configured and managed com.datasift.dropwizard.kafka.consumer.KafkaConsumer
 </p></dd></dl></div>
     </li><li visbl="pub" name="com.datasift.dropwizard.kafka.consumer.Consumer#apply" data-isabs="false">
-      <a id="apply[A](KafkaConsumerConfiguration,Environment)(StreamProcessor[A])(Decoder[A]):KafkaConsumer[A]"></a>
+      <a id="apply[A](KafkaConsumerConfiguration,Environment)(StreamProcessor[A])(Decoder[A]):KafkaConsumer"></a>
       <h4 class="signature">
       <span class="kind">def</span>
       <span class="symbol"> 
         <span class="name">apply</span>
         <span class="tparams">[<span name="A">A</span>]</span>
-        <span class="params">(<span name="conf">conf: <span name="com.datasift.dropwizard.kafka.config.KafkaConsumerConfiguration" class="extype">KafkaConsumerConfiguration</span></span>, <span name="env">env: <span name="com.yammer.dropwizard.config.Environment" class="extype">Environment</span></span>)</span><span class="params">(<span name="f">f: <span name="com.datasift.dropwizard.kafka.consumer.StreamProcessor" class="extype">StreamProcessor</span>[A]</span>)</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span name="kafka.serializer.Decoder" class="extype">Decoder</span>[A]</span>)</span><span class="result">: <span name="com.datasift.dropwizard.kafka.consumer.KafkaConsumer" class="extype">KafkaConsumer</span>[A]</span>
+        <span class="params">(<span name="conf">conf: <span name="com.datasift.dropwizard.kafka.config.KafkaConsumerConfiguration" class="extype">KafkaConsumerConfiguration</span></span>, <span name="env">env: <span name="com.yammer.dropwizard.config.Environment" class="extype">Environment</span></span>)</span><span class="params">(<span name="f">f: <span name="com.datasift.dropwizard.kafka.consumer.StreamProcessor" class="extype">StreamProcessor</span>[A]</span>)</span><span class="params">(<span class="implicit">implicit </span><span name="arg0">arg0: <span name="kafka.serializer.Decoder" class="extype">Decoder</span>[A]</span>)</span><span class="result">: <span name="com.datasift.dropwizard.kafka.consumer.KafkaConsumer" class="extype">KafkaConsumer</span></span>
       </span>
       </h4>
       <p class="shortcomment cmt">Creates a new com.datasift.dropwizard.kafka.consumer.KafkaConsumer for the given <code>configuration</code>.</p><div class="fullcomment"><div class="comment cmt"><p>Creates a new com.datasift.dropwizard.kafka.consumer.KafkaConsumer for the given <code>configuration</code>.
