--- a/dropwizard-extra-scala/scaladocs/index.html
+++ b/dropwizard-extra-scala/scaladocs/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html>
         <head>
-          <title>Dropwizard Extra Scala 0.5.1-3 API</title>
+          <title>Dropwizard Extra Scala 0.6.0-1 API</title>
           <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
           
       <link type="text/css" media="screen" rel="stylesheet" href="lib/index.css" />
@@ -34,14 +34,14 @@
             <ol class="templates"></ol>
             <ol class="packages"> <li class="pack" title="com.datasift.dropwizard">
             <a class="tplshow" target="template" href="com/datasift/dropwizard/package.html">com.datasift.dropwizard</a>
-            <ol class="templates"><li title="com.datasift.dropwizard.GraphiteReporting"><div class="placeholder"></div><a class="tplshow" target="template" href="com/datasift/dropwizard/GraphiteReporting.html"><span class="trait">(trait)</span><span class="tplLink">GraphiteReporting</span></a></li></ol>
-            <ol class="packages"> <li class="pack" title="com.datasift.dropwizard.db">
-            <a class="tplshow" target="template" href="com/datasift/dropwizard/db/package.html">com.datasift.dropwizard.db</a>
-            <ol class="templates"><li title="com.datasift.dropwizard.db.Database"><a class="tplshow" target="template" href="com/datasift/dropwizard/db/Database$.html"><span class="object">(object)</span><div class="placeholder"></div><span class="tplLink">Database</span></a></li><li title="com.datasift.dropwizard.db.DatabaseWrapper"><div class="placeholder"></div><a class="tplshow" target="template" href="com/datasift/dropwizard/db/DatabaseWrapper.html"><span class="class">(class)</span><span class="tplLink">DatabaseWrapper</span></a></li></ol>
-            <ol class="packages"> </ol>
-          </li><li class="pack" title="com.datasift.dropwizard.hbase">
+            <ol class="templates"></ol>
+            <ol class="packages"> <li class="pack" title="com.datasift.dropwizard.hbase">
             <a class="tplshow" target="template" href="com/datasift/dropwizard/hbase/package.html">com.datasift.dropwizard.hbase</a>
             <ol class="templates"><li title="com.datasift.dropwizard.hbase.HBase"><a class="tplshow" target="template" href="com/datasift/dropwizard/hbase/HBase$.html"><span class="object">(object)</span><div class="placeholder"></div><span class="tplLink">HBase</span></a></li></ol>
+            <ol class="packages"> </ol>
+          </li><li class="pack" title="com.datasift.dropwizard.jdbi">
+            <a class="tplshow" target="template" href="com/datasift/dropwizard/jdbi/package.html">com.datasift.dropwizard.jdbi</a>
+            <ol class="templates"><li title="com.datasift.dropwizard.jdbi.DBI"><a class="tplshow" target="template" href="com/datasift/dropwizard/jdbi/DBI$.html"><span class="object">(object)</span><div class="placeholder"></div><span class="tplLink">DBI</span></a></li><li title="com.datasift.dropwizard.jdbi.DBIWrapper"><div class="placeholder"></div><a class="tplshow" target="template" href="com/datasift/dropwizard/jdbi/DBIWrapper.html"><span class="class">(class)</span><span class="tplLink">DBIWrapper</span></a></li></ol>
             <ol class="packages"> </ol>
           </li><li class="pack" title="com.datasift.dropwizard.kafka">
             <a class="tplshow" target="template" href="com/datasift/dropwizard/kafka/package.html">com.datasift.dropwizard.kafka</a>
